# biocad_test_task

./: CMakeLists.txt  main.cpp  sum.cu  sum.cuh
